Fix whitespace in grouped listview

--- a/styles/mobile/nova/listview.less
+++ b/styles/mobile/nova/listview.less
@@ -27,7 +27,12 @@
     border-style: solid;
 
     line-height: 1.5em;
-    padding: 1.14em 1.61em;
+    padding: 1.09em 0.84em 1.23em 0.84em;
+}
+
+.km-nova .km-list:not(.km-virtual-list) > li:last-child
+{
+    border-bottom-width: 1px;
 }
 
 .km-nova .km-list > .km-load-more+li {
@@ -65,7 +70,7 @@
     font-weight: normal;
     border-bottom-width: 1px;
     border-bottom-style: solid;
-    padding: 1.17em 1.61em .39em;
+    padding: 1.17em 0.84em .39em;
 }
 
 .km-nova .km-listview-icons .km-group-title {
@@ -76,7 +81,7 @@
 .km-nova .km-listgroupinset .km-group-title
 {
     line-height: 1.5em;
-    border-top-width: 1px;
+    border-top-width: 0px;
     border-top-style: solid;
 }
 
